# RapidRAW

./: .gitignore  Makefile  last-claude.txt
docs/superpowers/plans/: 2026-06-16-rapidraw-relm4-core.md  2026-06-19-gtk-masks-foundation.md  2026-06-19-gtk-parity-roadmap.md  2026-06-21-relm4-sidebar-ratings.md  2026-06-26-masks-inpaint-overhaul.md
docs/superpowers/specs/: 2026-06-16-rapidraw-relm4-core-design.md  2026-06-19-gtk-masks-design.md  2026-06-21-relm4-sidebar-ratings-design.md  2026-06-26-masks-inpaint-overhaul-design.md
rapidraw-core/: Cargo.toml
rapidraw-core/src/: ai.rs  ai_connector.rs  albums.rs  auto_curve.rs  context.rs  exif.rs  folders.rs  gpu_processing.rs  image_loader.rs  image_processing.rs  lib.rs  lut_processing.rs  mask_generation.rs  raw_processing.rs  render.rs
rapidraw-core/tests/: render_smoke.rs
rapidraw-relm4/: .gitignore  Cargo.toml  FEATURE_MAP.md  README.md  build.rs  icons.toml
rapidraw-relm4/.claude/: settings.json
rapidraw-relm4/src/: ai_masks.rs  colorwheel.rs  controls.rs  crop.rs  curves.rs  editor.rs  histogram.rs  info.rs  inpaint.rs  library.rs  main.rs  masks.rs  meta.rs  scopes.rs  settings.rs  sidebar.rs  sidecar.rs  slider.rs  stars.rs  state.rs  thumb.rs  thumb_cache.rs
src-tauri/: Cargo.toml
src-tauri/src/: ai_connector.rs  ai_processing.rs  app_state.rs  file_management.rs  gpu_processing.rs  image_loader.rs  image_processing.rs  lib.rs  mask_generation.rs
