[package]
name = "rapidraw-core"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0"
image = { version = "0.25.10", features = ["jpeg", "png", "tiff", "webp"] }
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
half = { version = "2.7.1", features = ["bytemuck"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rawler = { git = "https://github.com/CyberTimon/RapidRAW-DngLab.git" }
anyhow = "1.0.102"
glam = "0.32.1"
imageproc = "0.26.2"
nalgebra = "0.34.2"
rayon = "1.12.0"
base64 = "0.22"
kamadak-exif = "0.6.1"
