[package]
name = "rapidraw-core"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0"
image = { version = "0.25.10", features = ["jpeg", "png", "tiff", "webp"] }
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
half = { version = "2.7.1", features = ["bytemuck"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rawler = { git = "https://github.com/CyberTimon/RapidRAW-DngLab.git" }
anyhow = "1.0.102"
glam = "0.32.1"
imageproc = "0.26.2"
nalgebra = "0.34.2"
rayon = "1.12.0"
base64 = "0.22"
kamadak-exif = "0.6.1"

# AI / ONNX inference (mask generation, inpaint, denoise, CLIP). Optional so
# core stays lean for consumers that don't need it; enabled by relm4/src-tauri.
ndarray = { version = "0.16", optional = true }
ort = { version = "=2.0.0-rc.10", features = ["ndarray", "load-dynamic"], optional = true }
sha2 = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }
tokenizers = { version = "0.23.1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls"], optional = true }
blake3 = { version = "1.8", optional = true }

[features]
ai = ["dep:ndarray", "dep:ort", "dep:sha2", "dep:hex", "dep:tokenizers", "dep:tokio", "dep:reqwest", "dep:blake3"]
