[package]
name = "rapidraw-relm4"
version = "0.1.0"
edition = "2021"

[dependencies]
rapidraw-core = { path = "../rapidraw-core" }
relm4 = { version = "0.9", features = ["libadwaita"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
gdk = { version = "0.9", package = "gdk4" }
image = "0.25.10"
bytemuck = "1"
log = "0.4"
env_logger = "0.11"
