[package]
name = "rapidraw-relm4"
version = "0.1.0"
edition = "2021"

[dependencies]
rapidraw-core = { path = "../rapidraw-core", features = ["ai"] }
relm4 = { version = "0.9", features = ["libadwaita"] }
relm4-icons = "0.9"
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
gdk = { version = "0.9", package = "gdk4" }
image = { version = "0.25.10", features = ["avif-native"] }
webp = "0.3"
jxl-encoder = "0.3.1"
bytemuck = "1"
kamadak-exif = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
# AI mask generation runs the async model download/init on a tokio runtime in a
# dedicated worker thread (the GTK main loop is glib, not tokio).
tokio = { version = "1", features = ["rt", "sync"] }

# build.rs fetches the ONNX Runtime dylib (load-dynamic) for the host target.
[build-dependencies]
sha2 = "0.11"
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
